--- a/AssetManagementSystem.PL/Views/Asset/Edit.cshtml
+++ b/AssetManagementSystem.PL/Views/Asset/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AssetManagementSystem.DAL.Entities.Asset
 @{
-    ViewData["Title"] = "Edit Asset";
+    ViewData["Title"] = "تعديل الأصل";
     Layout = "~/Views/Shared/_Dashboard.cshtml";
 }
 
@@ -8,9 +8,9 @@
     <div class="card shadow rounded">
         <div class="card-header bg-primary text-white d-flex align-items-center">
             <i class="bi bi-pencil-square me-2"></i>
-            <h4 class="mb-0">Edit Asset</h4>
+            <h4 class="mb-0">تعديل الأصل</h4>
         </div>
-        <div class="card-body">
+        <div class="card-body"> 
             <form asp-action="Edit">
                 <input type="hidden" asp-for="AssetTag" />
 
@@ -98,17 +98,17 @@
 
                         <div class="form-group form-check mb-3">
                             <input type="checkbox" asp-for="IsDisposed" class="form-check-input" />
-                            <label class="form-check-label fw-bold" asp-for="IsDisposed"><i class="bi bi-trash me-1"></i> Disposed?</label>
+                            <label class="form-check-label fw-bold" asp-for="IsDisposed"><i class="bi bi-trash me-1"></i> تكهين</label>
                         </div>
                     </div>
                 </div>
 
                 <div class="d-flex justify-content-end mt-4">
                     <button type="submit" class="btn btn-primary me-2">
-                        <i class="bi bi-save me-1"></i> Save
+                        <i class="bi bi-save me-1"></i> حفظ
                     </button>
                     <a asp-action="Index" class="btn btn-secondary">
-                        <i class="bi bi-x-circle me-1"></i> Cancel
+                        <i class="bi bi-x-circle me-1"></i> الغاء
                     </a>
                 </div>
             </form>
