--- a/AssetManagementSystem.PL/Views/Disposal/Create.cshtml
+++ b/AssetManagementSystem.PL/Views/Disposal/Create.cshtml
@@ -7,7 +7,7 @@
 
 <div class="container">
     <div class="d-flex justify-content-between align-items-center mb-3">
-        <h2 class="mb-0"><i class="bi bi-plus-square me-2"></i> Create Disposal</h2>
+        <h2 class="mb-0"><i class="bi bi-plus-square me-2"></i>اضافة تكهين</h2>
     </div>
 
     <div class="card shadow-lg border-0 rounded-4 mt-4">
