--- a/AssetManagementSystem.PL/Views/Disposal/Edit.cshtml
+++ b/AssetManagementSystem.PL/Views/Disposal/Edit.cshtml
@@ -1,13 +1,13 @@
 ﻿@model AssetManagementSystem.DAL.Entities.Disposal
 
 @{
-    ViewData["Title"] = "Edit Disposal";
+    ViewData["Title"] = "تعديل";
     Layout = "~/Views/Shared/_Dashboard.cshtml";
 }
 
 <div class="container">
     <div class="d-flex justify-content-between align-items-center mb-3">
-        <h2 class="mb-0"><i class="bi bi-pencil-square me-2"></i> Edit Disposal</h2>
+        <h2 class="mb-0"><i class="bi bi-pencil-square me-2"></i> تعديل</h2>
     </div>
 
     <div class="card shadow-lg border-0 rounded-4 mt-4">
@@ -39,10 +39,10 @@
 
                 <div class="d-flex justify-content-between">
                     <a asp-action="Index" class="btn btn-secondary rounded-pill">
-                        <i class="bi bi-arrow-left"></i> Back to List
+                        <i class="bi bi-arrow-left"></i>الرجوع الي القائمة
                     </a>
                     <button type="submit" class="btn btn-success rounded-pill">
-                        <i class="bi bi-check-circle"></i> Save Changes
+                        <i class="bi bi-check-circle"></i> حفظ التغييرات
                     </button>
                 </div>
             </form>
