--- a/AssetManagementSystem.PL/Views/AssetTransfer/Create.cshtml
+++ b/AssetManagementSystem.PL/Views/AssetTransfer/Create.cshtml
@@ -4,7 +4,7 @@
 	ViewData["Title"] = "Create Asset Transfer";
 	Layout = "~/Views/Shared/_Dashboard.cshtml";
 }
-<h2>Create Asset Transfer</h2>
+<h2>اضافة مناقلة</h2>
 
 <form asp-action="Create" method="post">
     <div class="form-group">
