--- a/AssetManagementSystem.PL/Views/AssetTransfer/Edit.cshtml
+++ b/AssetManagementSystem.PL/Views/AssetTransfer/Edit.cshtml
@@ -4,7 +4,7 @@
 	ViewData["Title"] = "Edit Asset Transfer";
 	Layout = "~/Views/Shared/_Dashboard.cshtml";
 }
-<h2>Edit Asset Transfer</h2>
+<h2>تعديل مناقلة</h2>
 
 <form asp-action="Edit" method="post">
     <input type="hidden" asp-for="Id" />
@@ -24,6 +24,6 @@
         <label asp-for="AssetTag"></label>
         <input asp-for="AssetTag" class="form-control" />
     </div>
-    <button type="submit" class="btn btn-primary">Save</button>
-    <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+    <button type="submit" class="btn btn-primary">حفظ</button>
+    <a asp-action="Index" class="btn btn-secondary">الغاء</a>
 </form>
